--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="site-body">
     <header class="header">
+      <div class="container">
       <nav class="header-navigation">
         <a href="./index.html" class="logo link"
           ><span class="logo-web">Web</span>Studio</a
@@ -31,6 +33,7 @@
           </li>
         </ul>
       </nav>
+      </div>
       <ul class="header-list list">
         <li class="header-item">
           <a class="header-mail link" href="mailto:info@devstudio.com"
@@ -46,10 +49,13 @@
     </header>
     <main>
       <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <section class="feature">
+        <div class="container">
         <ul class="feature-list list">
           <li class="feature-item">
             <h3 class="feature-title">Strategy</h3>
@@ -80,8 +86,10 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="second">
+        <div class="container">
         <h2 class="second-title">What are we doing</h2>
         <ul class="second-list list">
           <li class="second-item">
@@ -109,8 +117,10 @@
             />
           </li>
         </ul>
+      </div>
       </section>
       <section class="team">
+        <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-item">
@@ -157,9 +167,12 @@
             <p class="team-job">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
+    
     <footer class="footer">
+      <div class="container">
       <a href="" class="logo link"
         ><span class="footer-web">Web</span
         ><span class="footer-studio">Studio</span></a
@@ -168,6 +181,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
