--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="site-body">
     <header class="header">
+      <div class="container">
       <nav class="header-navigation">
         <a href="./index.html" class="logo link"
           ><span class="logo-web">Web</span>Studio</a
@@ -32,6 +34,7 @@
           </li>
         </ul>
       </nav>
+    </div>
       <ul class="header-list list">
         <li class="header-item">
           <a class="header-mail link" href="mailto:info@devstudio.com"
@@ -44,9 +47,11 @@
           >
         </li>
       </ul>
+
     </header>
     <main>
       <section class="portfolio">
+        <div class="container">
         <h1 class="visually-hidden">Portfolio</h1>
         <ul class="btn-list list">
           <li><button class="title-btn" type="button">All</button></li>
@@ -55,7 +60,8 @@
           <li><button class="title-btn" type="button">Design</button></li>
           <li><button class="title-btn" type="button">Marketing</button></li>
         </ul>
-
+      
+      
         <ul class="service-list list">
           <li class="list-img">
             <img
@@ -148,9 +154,11 @@
             <p class="title-img-text">Web Site</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="container">
       <a href="" class="logo link"
         ><span class="footer-web">Web</span
         ><span class="footer-studio">Studio</span></a
@@ -159,6 +167,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
