goit-markup-hw-03

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="site-body">
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
       <nav class="header-navigation">
         <a href="./index.html" class="logo link"
           ><span class="logo-web">Web</span>Studio</a
@@ -33,7 +33,7 @@
           </li>
         </ul>
       </nav>
-      </div>
+      
       <ul class="header-list list">
         <li class="header-item">
           <a class="header-mail link" href="mailto:info@devstudio.com"
@@ -46,6 +46,7 @@
           >
         </li>
       </ul>
+    </div>
     </header>
     <main>
       <section class="hero">
