--- a/portfolio.html
+++ b/portfolio.html
@@ -75,9 +75,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Banking App Interface Concept</h2>
               <p class="title-img-text">App</p>
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img5.jpg"
@@ -85,9 +87,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Cashless Payment</h2>
               <p class="title-img-text">Marketing</p>
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img6.jpg"
@@ -95,9 +99,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Meditaion App</h2>
               <p class="title-img-text">App</p>
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img7.jpg"
@@ -105,9 +111,12 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Taxi Service</h2>
               <p class="title-img-text">Marketing</p>
+            
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img8.jpg"
@@ -115,9 +124,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Screen Illustrations</h2>
               <p class="title-img-text">Design</p>
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img9.jpg"
@@ -125,9 +136,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Online Courses</h2>
               <p class="title-img-text">Marketing</p>
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img10.jpg"
@@ -135,9 +148,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Instagram Stories Concept</h2>
               <p class="title-img-text">Design</p>
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img11.jpg"
@@ -145,9 +160,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Organic Food</h2>
               <p class="title-img-text">Web Site</p>
             </li>
+          </div>
             <li class="list-img">
               <img
                 src="./img/img12.jpg"
@@ -155,9 +172,11 @@
                 width="360"
                 height="300"
               />
+              <div class="class-img">
               <h2 class="title-img">Fresh Coffee</h2>
               <p class="title-img-text">Web Site</p>
             </li>
+          </div>
           </ul>
         </div>
       </section>
